2011-03-22  Matthew Mundell <matthew.mundell@greenbone.net>

	Log the user out when connecting to the Administrator fails.

	* src/gsad_oap.c (administrator_connect): If connecting to adminstrator
	fails, log user out and return login page in new html param.  Update all
	callers to return this html when appropriate.

2011-03-22  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (get_trash): Correct count selects.

2011-03-22  Matthew Mundell <matthew.mundell@greenbone.net>

	Log the user out when connecting to the Manager fails.

	* src/gsad.c (user_find): New function.  Was token_user.  Update callers.
	(token_user): Replace with version that find user from token only.
	(token_user_remove): New function.  Remove user given token.

	* src/gsad_omp.c (manager_connect): If connecting to manager fails, log
	user out and return login page in new html param.  Update all callers to
	return this html when appropriate.

2011-03-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/omp.xsl (get_trash): Added a header line for contents
	table.

2011-03-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/img/restore_inactive.png: New. Interims icon.

	* CMakeLists.txt: Install restore icons.

	* src/html/omp.xsl: Apply new restore icon where resume
	was used for the time being.

2011-03-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/omp.xsl (get_trash): Make overview table use
	full width and add title for this contents.

2011-03-21  Henri Doreau <henri.doreau@greenbone.net>

	* src/html/omp.xsl: mark IPs with an icon representing the detected
	Operating System.

	* src/html/os.xml: New. Database to retrieve the OS icon and title to
	display for a given CPE.

	* CMakeLists.txt: consider the new files during the installation.

2011-03-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/img/indicator_software_update.png,
	src/html/img/indicator_software_update_inactive.png: New. Indicator